--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,8 @@
 ﻿@import url("font/quicksand.css");
 
 body,
-html {
+html,
+#app {
   height: 100%;
 }
 
@@ -61,7 +62,6 @@ form {
   overflow-y: auto;
   background: linear-gradient(rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.4) 80%);
   padding: 1.5rem !important;
-  height: 100vh;
 }
 
 .nav-tab {
