--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,6 +1,7 @@
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
 @inject OrderState OrderState
+@inject IJSRuntime JavaScript
 @layout MainLayout
 @page "/"
 
@@ -43,7 +44,10 @@
                     <div class="item-price">
                         @configuredPizza.GetFormattedTotalPrice()
                     </div>
-                    <a @onclick="@(() => OrderState.RemoveConfiguredPizza(configuredPizza))" class="delete-item">x</a>
+                    <button type="button" class="close text-danger" aria-label="Close"
+                        @onclick="@(async () => await RemovePizzaConfirmation(configuredPizza))">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
             }
         </div>
@@ -72,4 +76,13 @@
         specials = await HttpClient.GetFromJsonAsync<List<PizzaSpecial>>(NavigationManager.BaseUri + "specials");
     }
 
+    async Task RemovePizzaConfirmation(Pizza removePizza)
+    {
+        if (await JavaScript.InvokeAsync<bool>(
+        "confirm",
+        $"""Do you want to remove the "{removePizza.Special!.Name}" from your order?"""))
+        {
+            OrderState.RemoveConfiguredPizza(removePizza);
+        }
+    }
 }
