--- a/Shared/ConfigurePizzaDialog.razor
+++ b/Shared/ConfigurePizzaDialog.razor
@@ -6,15 +6,18 @@
             <h2>@Pizza.Special.Name</h2>
             @Pizza.Special.Description
         </div>
-        <form class="dialog-body">
-            <div>
-                <label>Size:</label>
-                <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" @bind="Pizza.Size" />
-                <span class="size-label">
-                    @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
-                </span>
-            </div>
-        </form>
+        @if (supportSizing)
+        {
+            <form class="dialog-body">
+                <div>
+                    <label>Size:</label>
+                    <input type="range" min="@Pizza.MinimumSize" max="@Pizza.MaximumSize" step="1" @bind="Pizza.Size" />
+                    <span class="size-label">
+                        @(Pizza.Size)" (£@(Pizza.GetFormattedTotalPrice()))
+                    </span>
+                </div>
+            </form>
+        }
 
         <div class="dialog-buttons">
             <button class="btn btn-secondary mr-auto" @onclick="OnCancel">Cancel</button>
@@ -35,4 +38,15 @@
 
     [Parameter]
     public EventCallback OnConfirm { get; set; }
+
+    private bool supportSizing = true;
+
+    protected override void OnInitialized()
+    {
+        if (Pizza is { Special.FixedSize: not null })
+        {
+            Pizza.Size = Pizza.Special.FixedSize.Value;
+            supportSizing = false;
+        }
+    }
 }
